Semana 2: Oscar Sanchez - aprobacion sonarqube